Add date function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 	
 	<script src="service.js"></script>
+	<script src="getCurrentDate.js"></script>
 	<script src="main.js"></script>
 
 </head>
