--- a/index.html
+++ b/index.html
@@ -3,51 +3,46 @@
 <head>
 	<title>Messege App</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+	<script src="initializeFB.js"></script>
 
 	<!-- AngularJS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script>
 
-	<!-- Firebase -->
-	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-	<!-- AngularFire -->
-	<script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
-	
-	<script src="service.js"></script>
 	<script src="getCurrentDate.js"></script>
 	<script src="main.js"></script>
 
 </head>
-<body ng-app="messageApp">
+<body ng-app="messageApp" class="text-center">
 	<div ng-controller="mainController">
 		<div ng-hide="currentUser">
 			<h1>Login</h1>		
-			<label>Email</label>
-			<input type="email" ng-model="email">
-			<label>Password</label>
-			<input type="password" ng-model="password">
-			<a href='' ng-click="login()">Login</a>
+			<input type="email" ng-model="email" class="form-control text-center" placeholder="Email" >
+			<input type="password" ng-model="password" class="form-control text-center" placeholder="Password" >
+			<a href='' ng-click="signIn()" class="btn text-center">Login</a>
 			<span ng-click="get()">GET DATA</span>
-			<h1>Register</h1>
-			<label>User Name</label>
-			<input type="text" ng-model="usernameNew">
-			<label>Email</label>
-			<input type="email" ng-model="emailNew">
-			<label>Password</label>
-			<input type="password" ng-model="passwordNew">
-			<a href='' ng-click="createUser()">Register</a>
+			<h1>Registration</h1>
+			<input type="text" ng-model="usernameNew" class="form-control text-center" placeholder="User Name">
+			<input type="email" ng-model="emailNew" class="form-control text-center" placeholder="Email">
+			<input type="password" ng-model="passwordNew" class="form-control text-center" placeholder="Password">
+			<a href='' ng-click="createUser()" class="btn text-center">Register</a>
 		</div>
 		<div ng-show="currentUser">
-			<h1>Current user: {{currentUser.userInfo.username}}</h1>
-			<input type="text" ng-model="messagePost" placeholder="Your Message Here">
-			<button ng-click="sendMessage()">Send</button>
-			<button ng-click="logout()">Logout</button>
-			<table>
+			<h1>Current user: {{currentUser.displayName}}</h1>
+			<input type="text" ng-model="messagePost" placeholder="Your Message Here" class="form-control text-center" id="message-box">
+			<button ng-click="sendMessage()" class="btn btn-default">Send</button>
+			<button ng-click="signOut()" class="btn btn-default">Logout</button>
+			<table class="table table-striped">
       				<tr ng-repeat="message in messages">
-					<td><span>{{message.author}}:</td>
-					<td><span><b>{{message.content}}</b></span></td>
-					<td><span>{{message.date}}</span></td>
-					<td><button ng-click="messages.$remove(message)">x</button></td>
+					<td><span>{{message.username}}: </td>
+					<td><span><b>{{message.message}}</b></span></td>
+					<td><span>{{message.dateText}}</span></td>
+					<td><button ng-click="remove(message)" class="btn btn-default">x</button></td>
 				</tr>
     			</table>
 		</div>
