--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
 	<title>Messege App</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
+	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="style/style.css" rel="stylesheet">
+
+	<!-- Firebase -->
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-	<script src="initializeFB.js"></script>
+	<script src="service/initializeFB.js"></script>
 
 	<!-- AngularJS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script>
 
+	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-	<script src="getCurrentDate.js"></script>
-	<script src="main.js"></script>
+	<script src="service/currentDate.js"></script>
+	<script src="main.js"></script>		
+	<script src="service/filter.js"></script>
 
 </head>
 <body ng-app="messageApp" class="text-center">
@@ -25,12 +30,13 @@
 			<input type="email" ng-model="email" class="form-control text-center" placeholder="Email" >
 			<input type="password" ng-model="password" class="form-control text-center" placeholder="Password" >
 			<a href='' ng-click="signIn()" class="btn text-center">Login</a>
-			<span ng-click="get()">GET DATA</span>
 			<h1>Registration</h1>
 			<input type="text" ng-model="usernameNew" class="form-control text-center" placeholder="User Name">
 			<input type="email" ng-model="emailNew" class="form-control text-center" placeholder="Email">
 			<input type="password" ng-model="passwordNew" class="form-control text-center" placeholder="Password">
 			<a href='' ng-click="createUser()" class="btn text-center">Register</a>
+			<div>or</div>
+			<a href='' ng-click="signInAnon()" class="btn text-center">Login<br>Anonymously</a>
 		</div>
 		<div ng-show="currentUser">
 			<h1>Current user: {{currentUser.displayName}}</h1>
@@ -38,13 +44,14 @@
 			<button ng-click="sendMessage()" class="btn btn-default">Send</button>
 			<button ng-click="signOut()" class="btn btn-default">Logout</button>
 			<table class="table table-striped">
-      				<tr ng-repeat="message in messages">
+				<tr ng-repeat="message in messages | orderObjectBy:'dateMS':true" ng-if ="$index < messagesLimit">
 					<td><span>{{message.username}}: </td>
 					<td><span><b>{{message.message}}</b></span></td>
 					<td><span>{{message.dateText}}</span></td>
 					<td><button ng-click="remove(message)" class="btn btn-default">x</button></td>
-				</tr>
-    			</table>
+				</tr>				
+			</table>
+			<button ng-click="showMoreMessages()" class="btn btn-default">Show More</button>
 		</div>
 	</div>
 </body>
