--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-	<script src="service/currentDate.js"></script>
+	<script src="service/time.js"></script>
 	<script src="main.js"></script>		
 	<script src="service/filter.js"></script>
 
