--- a/index.html
+++ b/index.html
@@ -12,48 +12,24 @@
 	<script src="service/initializeFB.js"></script>
 
 	<!-- AngularJS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js">
 	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script>
 
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 	<script src="service/time.js"></script>
-	<script src="main.js"></script>		
+	<script src="main.js"></script>
+	<script src="template/loginCtrl.js"></script>
+	<script src="template/chatCtrl.js"></script>
+
 	<script src="service/filter.js"></script>
+	<script src="service/route.js"></script>
+	<script src="service/currentUser.js"></script>
 
 </head>
 <body ng-app="messageApp" class="text-center">
-	<div ng-controller="mainController">
-		<div ng-hide="currentUser">
-			<h1>Login</h1>		
-			<input type="email" ng-model="email" class="form-control text-center" placeholder="Email" >
-			<input type="password" ng-model="password" class="form-control text-center" placeholder="Password" >
-			<a href='' ng-click="signIn()" class="btn text-center">Login</a>
-			<h1>Registration</h1>
-			<input type="text" ng-model="usernameNew" class="form-control text-center" placeholder="User Name">
-			<input type="email" ng-model="emailNew" class="form-control text-center" placeholder="Email">
-			<input type="password" ng-model="passwordNew" class="form-control text-center" placeholder="Password">
-			<a href='' ng-click="createUser()" class="btn text-center">Register</a>
-			<div>or</div>
-			<a href='' ng-click="signInAnon()" class="btn text-center">Login<br>Anonymously</a>
-		</div>
-		<form ng-show="currentUser" ng-focus="sendMessage()">
-			<h1>Current user: {{currentUser.displayName}}</h1>
-			<a href='' ng-click="signOut()" class="btn text-center">Logout</a>
-			<input type="text" ng-model="messagePost" placeholder="Your Message Here" class="form-control text-center" id="message-box">
-			<input type="submit" value="Send" ng-click="sendMessage()" class="btn btn-default">
-			<table class="table table-striped">
-				<tr ng-repeat="message in messages | orderObjectBy:'dateMS':true" ng-if ="$index < messagesLimit.default">
-					<td><span>{{message.username}}: </td>
-					<td><span><b>{{message.message}}</b></span></td>
-					<td><span>{{message.dateAgo}}</span></td>
-					<td><button ng-click="remove(message)" class="btn btn-default">x</button></td>
-				</tr>				
-			</table>
-			<a href='' ng-click="messagesLimit.getMore()" class="btn text-center" ng-hide="messagesLimit.default >= messagesLimit.total">Show More</a>
-			<a href='' ng-click="messagesLimit.getLess()" class="btn text-center" ng-hide="messagesLimit.default <= 5">Show Less</a>
-		</form>
-	</div>
+	<div ng-view></div>
 </body>
 </html>
