--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<!-- AngularJS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js">
-	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
+	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>
 
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -23,10 +24,12 @@
 	<script src="main.js"></script>
 	<script src="template/loginCtrl.js"></script>
 	<script src="template/chatCtrl.js"></script>
+	<script src="template/userinfo.js"></script>
 
 	<script src="service/filter.js"></script>
 	<script src="service/route.js"></script>
 	<script src="service/currentUser.js"></script>
+	<script src="service/currentMessage.js"></script>
 
 </head>
 <body ng-app="messageApp" class="text-center">
