--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 	<script src="service/initializeFB.js"></script>
 
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
 	<!-- AngularJS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.min.js">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
 	<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>
-
-	<!-- JQuery -->
-	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script src="https://rawgit.com/BinaryMuse/ngInfiniteScroll/1.0.0/build/ng-infinite-scroll.min.js"></script>
 
 	<script src="service/time.js"></script>
 	<script src="main.js"></script>
